# hypercube

./: Cargo.toml  Makefile  README.md  build.rs  chiper.vhc  plaintext.txt  x.vhc
codebreaker/: Cargo.toml  README.md
codebreaker/src/: analyze.rs  main.rs  stats.rs
codebreaker/tests/: cli.rs
hypercube/: Cargo.toml  README.md
hypercube/src/: cube.rs  error.rs  header.rs  lib.rs  main.rs  partition.rs  vhc.rs
hypercube/src/cli/: add.rs  extract.rs  info.rs  mod.rs  seal.rs
hypercube/src/pipeline/: aont.rs  compress.rs  fragment.rs  mod.rs  sequence.rs
hypercube/tests/: cli.rs
hypercube/tests/integration/: mod.rs
hypercube/tests/unit/: mod.rs
src/: compartment.rs  cube.rs  error.rs  header.rs  lib.rs  main.rs  vhc.rs
src/cli/: add.rs  analyze.rs  extract.rs  info.rs  mod.rs  seal.rs  stats.rs
src/pipeline/: aont.rs  compress.rs  fragment.rs  mac.rs  mod.rs  segment.rs  sequence.rs  shuffle.rs  whiten.rs
