[package]
name = "hypercube"
version = "0.1.0"
edition = "2021"
description = "Rivest Chaffing and Winnowing cryptographic container format"
license = "GPL-3.0"
build = "build.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
sha3 = "0.10"
blake3 = "1"
sha2 = "0.10"
zstd = "0.13"
lz4_flex = "0.11"
brotli = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
thiserror = "2"
hex = "0.4"
hmac = "0.12"
digest = "0.10"

[dev-dependencies]
tempfile = "3"
proptest = "1"

[[bin]]
name = "hypercube"
path = "src/main.rs"
